--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
         tty: true
         stdin_open: true
         working_dir: /usr/src/app
-        command: python
+        command: ["python","myscript.py"]
